-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 9
-
Component/s: hotspot
-
b105
Chuck Rasbold wrote:
> I've found the LogCompilation files incomplete when a JIT crashes and OnError is used to move the files.
>
> When the VM aborts, flush the output streams before OnError commands are processed.
>
> I've found the LogCompilation files incomplete when a JIT crashes and OnError is used to move the files.
>
> When the VM aborts, flush the output streams before OnError commands are processed.
>
- relates to
-
JDK-8041510 compiler/intrinsics/mathexact/sanity/AddExactIntTest.java fails due to unexpected log message
-
- Closed
-