6985422: flush the output streams before OnError commands

Reviewed-by: kvn